# xmlcarve

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  README.zh.md
.github/workflows/: ci.yml
docs/: mapping.md
examples/: README.md  feed.xml  wiki.xml
scripts/: smoke.sh
src/: carve.rs  cli.rs  entity.rs  inspect.rs  json.rs  lib.rs  main.rs  record.rs  selector.rs  xml.rs
tests/: cli.rs
